# pystructs

./: README.md  pyproject.toml  setup.py
pystruct/: __init__.py  base.py  codec.py
pystruct/struct/: __init__.py  fields.py  struct.py
pystructs/: __init__.py  abc.py  base.py  bytestr.py  codec.py  helpers.py  integer.py  list.py  lists.py  net.py  std.py  struct.py
pystructs/tests/: std.py
